fixed h1 tag alignment on home page

--- a/src/components/pages/Home/index.scss
+++ b/src/components/pages/Home/index.scss
@@ -52,7 +52,7 @@
         font-size: 18px;
         position: absolute;
         top: calc(100%);
-        left: 20px;
+        left: 0;
         opacity: 0.6;
       }
 
